--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,18 @@
+.comment-btn,
+.like-btn{
+    width: 40px;
+    fill: none;
+}
 
+.comment-stroke,
+.like-stroke{
+    stroke: #000;
+}
+
+
+.like-btn:hover,
+.comment-btn:hover,
+.like-btn:focus,
+.comment-btn:focus{
+    fill: red
+}
